trunk/Archive2/55/818d261daa1037/output
main.cpp:19:39: error: missing terminating " character
         std::cout << ""! not contain: " << n1 << '\n';
                                       ^
main.cpp:19:9: error: missing terminating " character
         std::cout << ""! not contain: " << n1 << '\n';
         ^
main.cpp: In function 'int main()':
main.cpp:19:24: error: expected ';' before '!' token
         std::cout << ""! not contain: " << n1 << '\n';
                        ^
